<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.zzang.chongdae.presentation.view.write.OfferingWriteViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/size_26">

        <ScrollView
            android:id="@+id/sv_main_write_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/layout_submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_information_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_44"
                    android:fontFamily="@font/suit_bold"
                    android:text="@string/write_information_message_essential"
                    android:textColor="@color/black_700"
                    android:textSize="@dimen/size_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/Theme.AppCompat.TextView.Write.Subject"
                    android:layout_marginTop="@dimen/size_33"
                    android:text="@string/all_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_information_message" />

                <TextView
                    style="@style/Theme.AppCompat.TextView.Write.Asterisk"
                    app:layout_constraintStart_toEndOf="@id/tv_title"
                    app:layout_constraintTop_toTopOf="@id/tv_title" />

                <EditText
                    android:id="@+id/et_title"
                    style="@style/Theme.AppCompat.TextView.Write.EditText"
                    android:hint="@string/write_enter_offering_title"
                    android:text="@={vm.title}"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <TextView
                    android:id="@+id/tv_total_personnel"
                    style="@style/Theme.AppCompat.TextView.Write.Subject"
                    android:text="@string/write_total_personnel"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/et_title" />

                <TextView
                    style="@style/Theme.AppCompat.TextView.Write.Asterisk"
                    app:layout_constraintStart_toEndOf="@id/tv_total_personnel"
                    app:layout_constraintTop_toTopOf="@id/tv_total_personnel" />

                <Button
                    android:id="@+id/btn_minus_total_personnel"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="@dimen/size_19"
                    android:background="@drawable/btn_offering_write_minus_total_personnel"
                    android:fontFamily="@font/suit_bold"
                    android:gravity="center"
                    android:onClick="@{() -> vm.decreaseTotalCount()}"
                    android:text="@string/all_minus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_20"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_total_personnel" />


                <EditText
                    android:id="@+id/et_total_personnel"
                    android:layout_width="100dp"
                    android:layout_height="@dimen/size_40"
                    android:layout_marginStart="@dimen/size_7"
                    android:layout_marginTop="-1dp"
                    android:background="@drawable/et_border_main_color"
                    android:gravity="center"
                    android:text="@={vm.totalCount}"
                    android:textColor="@color/gray_900"
                    android:textSize="20dp"
                    app:layout_constraintStart_toEndOf="@id/btn_minus_total_personnel"
                    app:layout_constraintTop_toTopOf="@id/btn_minus_total_personnel"
                    tools:text="2" />

                <Button
                    android:id="@+id/btn_plus_total_personnel"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="@dimen/size_7"
                    android:background="@drawable/btn_offering_write_minus_total_personnel"
                    android:fontFamily="@font/suit_bold"
                    android:gravity="center"
                    android:onClick="@{() -> vm.increaseTotalCount()}"
                    android:text="@string/all_plus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_20"
                    app:layout_constraintStart_toEndOf="@id/et_total_personnel"
                    app:layout_constraintTop_toTopOf="@id/btn_minus_total_personnel" />

                <TextView
                    android:id="@+id/tv_total_price"
                    style="@style/Theme.AppCompat.TextView.Write.Subject"
                    android:text="@string/write_total_price"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/btn_minus_total_personnel" />

                <TextView
                    style="@style/Theme.AppCompat.TextView.Write.Asterisk"
                    app:layout_constraintStart_toEndOf="@id/tv_total_price"
                    app:layout_constraintTop_toTopOf="@id/tv_total_price" />

                <EditText
                    android:id="@+id/et_total_price"
                    style="@style/Theme.AppCompat.TextView.Write.EditText"
                    android:hint="@string/write_information_total_price"
                    android:text="@={vm.totalPrice}"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_total_price" />

                <TextView
                    android:id="@+id/tv_per_n_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10"
                    android:fontFamily="@font/suit_bold"
                    android:text="@string/write_per_n_price"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/size_15"
                    app:isVisible="@{vm.splitPriceVisibility}"
                    app:layout_constraintStart_toStartOf="@id/et_total_price"
                    app:layout_constraintTop_toBottomOf="@id/et_total_price" />

                <TextView
                    android:id="@+id/tv_per_n_price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/suit_bold"
                    android:text="@{@string/all_money_amount_text(vm.splitPrice)}"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/size_15"
                    app:isVisible="@{vm.splitPriceVisibility}"
                    app:layout_constraintStart_toEndOf="@id/tv_per_n_price"
                    app:layout_constraintTop_toTopOf="@id/tv_per_n_price"
                    tools:text="10,000원" />

                <TextView
                    android:id="@+id/tv_place"
                    style="@style/Theme.AppCompat.TextView.Write.Subject"
                    android:text="@string/all_place"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_per_n_price" />

                <TextView
                    style="@style/Theme.AppCompat.TextView.Write.Asterisk"
                    app:layout_constraintStart_toEndOf="@id/tv_place"
                    app:layout_constraintTop_toTopOf="@id/tv_place" />

                <TextView
                    android:id="@+id/tv_place_value"
                    style="@style/Theme.AppCompat.TextView.Write.EditText"
                    android:gravity="center_vertical"
                    android:hint="@string/write_search_place"
                    android:text="@={vm.meetingAddress}"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_place" />

                <EditText
                    android:id="@+id/et_place_detail"
                    style="@style/Theme.AppCompat.TextView.Write.EditText"
                    android:layout_marginTop="8dp"
                    android:hint="@string/write_enter_place_detail"
                    android:text="@={vm.meetingAddressDetail}"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_place_value" />

                <TextView
                    android:id="@+id/tv_deadline"
                    style="@style/Theme.AppCompat.TextView.Write.Subject"
                    android:text="@string/write_deadline"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/et_place_detail" />

                <TextView
                    style="@style/Theme.AppCompat.TextView.Write.Asterisk"
                    app:layout_constraintStart_toEndOf="@id/tv_deadline"
                    app:layout_constraintTop_toTopOf="@id/tv_deadline" />

                <TextView
                    android:id="@+id/tv_deadline_value"
                    style="@style/Theme.AppCompat.TextView.Write.EditText"
                    android:fontFamily="@font/suit_medium"
                    android:gravity="center_vertical"
                    android:hint="@string/write_deadline_description"
                    android:onClick="@{() -> vm.makeDeadlineChoiceEvent()}"
                    android:text="@{vm.deadline}"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_deadline" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_8"
                    android:src="@drawable/ic_calendar2"
                    app:layout_constraintBottom_toBottomOf="@id/tv_deadline_value"
                    app:layout_constraintEnd_toEndOf="@id/tv_deadline_value"
                    app:layout_constraintTop_toTopOf="@id/tv_deadline_value" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_main_write_view">

            <Button
                android:id="@+id/btn_submit_offering_write"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/size_34"
                android:background="@drawable/btn_background_selector"
                android:enabled="@{vm.submitButtonEnabled}"
                android:fontFamily="@font/suit_medium"
                android:onClick="@{() -> vm.postOffering()}"
                android:text="@{vm.submitButtonEnabled ? @string/write_start_offering : @string/write_start_offering_button_disabled}"
                android:textColor="@color/white"
                android:textSize="@dimen/size_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="공동구매 시작하기!" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
