<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.zzang.chongdae.presentation.view.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.mypage.MyPageFragment">

        <TextView
            android:id="@+id/tv_my_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/suit_medium"
            android:text="@string/my_page_title_text"
            android:textColor="@color/my_page_title"
            android:textSize="@dimen/font_size_17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/horizon_line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:background="@color/horizon_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_title" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="43dp"
            android:src="@drawable/ic_my_page_profile"
            app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizon_line"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/tv_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_35"
            android:layout_marginTop="@dimen/size_35"
            android:fontFamily="@font/suit_medium"
            android:text="@string/my_page_welcome_text"
            android:textColor="@color/black_1000"
            android:textSize="@dimen/font_size_18"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/horizon_line" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_3"
            android:fontFamily="@font/suit_semibold"
            android:text="@{vm.nickName}"
            android:textColor="@color/main_color"
            android:textSize="@dimen/font_size_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_welcome_text"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_text"
            tools:text="총알133" />

        <TextView
            android:id="@+id/tv_nickname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_2"
            android:fontFamily="@font/suit_semibold"
            android:text="@string/my_page_nickname_title"
            android:textColor="@color/gray_900"
            android:textSize="@dimen/font_size_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
            app:layout_constraintStart_toEndOf="@id/tv_nickname"
            app:layout_constraintTop_toTopOf="@id/tv_nickname" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@color/gray_300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname_title" />

        <include
            android:id="@+id/switch_notification_activate"
            layout="@layout/item_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="@={vm.isNotificationActivate}"
            app:label="@{@string/my_page_notification_available_text}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider"
            app:onCheckedChanged="@{(button, isChecked) -> vm.onNotificationActivateSwitchChanged(isChecked)}"
            app:vm="@{vm}" />

        <include
            android:id="@+id/switch_notification_popup"
            layout="@layout/item_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checked="@={vm.isNotificationImportanceHigh}"
            app:label="@{@string/my_page_notification_setting_text}"
            app:layout_constraintStart_toStartOf="parent"
            app:isVisible="@{vm.isNotificationActivate}"
            app:layout_constraintTop_toBottomOf="@id/switch_notification_activate"
            app:onCheckedChanged="@{(button, isChecked) -> vm.onNotificationImportanceSwitchChanged(isChecked)}"
            app:vm="@{vm}" />

        <ImageView
            android:id="@+id/iv_nickname_modification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_my_page_nickname_modification"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
            app:layout_constraintStart_toEndOf="@id/tv_nickname_title"
            app:layout_constraintTop_toTopOf="@id/tv_nickname" />

        <!--        <ImageView-->
        <!--            android:id="@+id/iv_my_offerings"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="42dp"-->
        <!--            android:layout_marginTop="55dp"-->
        <!--            android:src="@drawable/ic_my_page_my_offerings"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/iv_profile" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/tv_my_offerings"-->
        <!--            style="@style/Theme.AppCompat.TextView.Bold.Black1000.Size14"-->
        <!--            android:layout_marginStart="12dp"-->
        <!--            android:text="@string/my_page_offerings_text"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/iv_my_offerings"-->
        <!--            app:layout_constraintStart_toEndOf="@id/iv_my_offerings"-->
        <!--            app:layout_constraintTop_toTopOf="@id/iv_my_offerings" />-->

        <ImageView
            android:id="@+id/iv_terms_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:src="@drawable/ic_my_page_terms_of_use"
            app:layout_constraintBottom_toBottomOf="@id/tv_terms_of_use"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_terms_of_use" />

        <TextView
            android:id="@+id/tv_terms_of_use"
            style="@style/Theme.AppCompat.TextView.Bold.Black1000.Size15"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/size_12"
            android:text="@string/my_page_terms_of_use_text"
            app:debouncedOnClick="@{() -> vm.onClickTermsOfUse()}"
            app:layout_constraintBottom_toBottomOf="@id/iv_terms_of_use"
            app:layout_constraintStart_toEndOf="@id/iv_terms_of_use"
            app:layout_constraintTop_toBottomOf="@id/switch_notification_popup" />

        <ImageView
            android:id="@+id/iv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:src="@drawable/ic_my_page_privacy"
            app:layout_constraintStart_toStartOf="@id/iv_terms_of_use"
            app:layout_constraintTop_toBottomOf="@id/iv_terms_of_use" />

        <TextView
            android:id="@+id/tv_privacy"
            style="@style/Theme.AppCompat.TextView.Bold.Black1000.Size15"
            android:padding="@dimen/size_12"
            android:text="@string/my_page_privacy_text"
            app:debouncedOnClick="@{() -> vm.onClickPrivacy()}"
            app:layout_constraintBottom_toBottomOf="@id/iv_privacy"
            app:layout_constraintStart_toEndOf="@id/iv_privacy"
            app:layout_constraintTop_toTopOf="@id/iv_privacy" />

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:src="@drawable/ic_my_page_logout"
            app:layout_constraintStart_toStartOf="@id/iv_privacy"
            app:layout_constraintTop_toBottomOf="@id/iv_privacy" />

        <TextView
            android:id="@+id/tv_logout"
            style="@style/Theme.AppCompat.TextView.Bold.Black1000.Size15"
            android:padding="@dimen/size_12"
            android:text="@string/my_page_logout_text"
            app:debouncedOnClick="@{() -> vm.onClickLogout()}"
            app:layout_constraintBottom_toBottomOf="@id/iv_logout"
            app:layout_constraintStart_toEndOf="@id/iv_logout"
            app:layout_constraintTop_toTopOf="@id/iv_logout" />

        <ImageView
            android:id="@+id/iv_withdrawal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:src="@drawable/ic_my_page_withdrawal"
            app:layout_constraintStart_toStartOf="@id/iv_logout"
            app:layout_constraintTop_toBottomOf="@id/iv_logout" />

        <TextView
            android:id="@+id/tv_withdrawal"
            style="@style/Theme.AppCompat.TextView.Bold.Black1000.Size15"
            android:padding="@dimen/size_12"
            android:text="@string/my_page_withdrawal_text"
            app:debouncedOnClick="@{() -> vm.onClickWithdrawal()}"
            app:layout_constraintBottom_toBottomOf="@id/iv_withdrawal"
            app:layout_constraintStart_toEndOf="@id/iv_withdrawal"
            app:layout_constraintTop_toTopOf="@id/iv_withdrawal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
